--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.12.13",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7"
   }
 }
