--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -13,6 +14,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.12.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7"
   }
